# web-based-emisi-carbon

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  prompt-build-carbon-calculator.md
.github/workflows/: deploy.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: e8b82700ce79_initial_schema.py
backend/app/: cli.py  config.py  db.py  main.py
backend/app/api/: auth.py  deps.py  domains.py  factors.py  ingest.py  projects.py  reports.py
backend/app/core/: engine.py  gwp.py  provenance.py  security.py  strategies.py  uncertainty.py  units.py
backend/app/domains/: base.py  organizational.py  personal.py  product.py  registry.py  sector.py
backend/app/factors/: registry.py  seed.py
backend/app/models/: __init__.py  base.py  enums.py  project.py  registry.py  user.py
backend/app/schemas/: project.py  registry.py
backend/seed_data/: seed.json
backend/tests/: conftest.py  test_api.py  test_engine.py  test_organizational.py  test_personal.py  test_phase3.py  test_phase4.py  test_phase5.py  test_reports.py
docs/: methodology.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AppShell.tsx  Dialog.tsx  ReportPanel.tsx  appshell.css  charts.css  charts.tsx  dialog.css  report.css  ui.css  ui.tsx
frontend/src/data/: seed.json
frontend/src/lib/: api.ts  domainTypes.ts  format.ts  staticBackend.ts  staticEngine.ts  types.ts  useAsync.ts
(+14 files in other folders)
